[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hydropandas"
dynamic = ["version"]
description = "Module bmes."
readme = "readme.md"
authors = [{ name = "Onasda", email = "oasdas@asdasd.nl" }]
maintainers = [
    { name = "Odfads", email = "asdsads@aasdasdar.nl" },
    
]
requires-python = ">=3.7"
dependencies = ["scipy", "pandas", "matplotlib", "tqdm", "requests", "colorama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    "Operating System :: OS Independent",
    'Topic :: Scientific/Engineering :: Hydrology',
]

[project.urls]
homepage = "https://www.artesia-water.ndasdl"
repository = "https://github.com/artesiaasdsadawater/hydropandas"
documentation = "https://hydropandas.reaasdasddthedocs.io/en/stable/"

[project.optional-dependencies]
full = [
    "geopandas",
    "openpyxl",
    "pastastore",
    "bokeh",
    "branca",
    "folium",
    "flopy",
    "xarray",
    "shapely",
    "pyproj",
    "contextily"
]
rtd = [
    "hydropandas[full]",
    "imod",
    "lxml",
    "requests",
    "Shapely",
    "nbconvert",
    "ipykernel",
    "netCDF4==1.5.8",
    "docutils<0.18",
    "sphinx_rtd_theme",
    "Ipython",
    "nbsphinx",
    "nbsphinx_link",
]
linting = ["flake8", "ruff"]
formatting = ["black[jupyter]", "isort"]
pytesting = ["hydropandas[full,rtd]", "pytest>=7", "pytest-cov", "pytest-sugar"]
coveraging = ["coverage"]
dev = ["hydropandas[linting,formatting,pytesting]", "tox"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "hydropandas.version.__version__" }

[tool.setuptools.package-data]
"hydropandas.data" = ["*.json"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
addopts = "--durations=0"
markers = ["slow: mark test as slow."]


"""
